--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,5 +1,5 @@
-agent-cm (0.7.0) UNRELEASED; urgency=low
+fty-metric-compute (0.7.0) UNRELEASED; urgency=low
 
   * Initial packaging.
 
- -- agent-cm Developers <bios@eaton.com>           Wed, 31 Dec 2014 00:00:00 +0000
+ -- fty-metric-compute Developers <eatonipcopensource@eaton.com>  Wed, 31 Dec 2014 00:00:00 +0000
