--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -2,4 +2,4 @@ fty-metric-compute (1.0.0) UNRELEASED; urgency=low
 
   * Initial packaging.
 
- -- fty-metric-compute Developers <eatonipcopensource@eaton.com>  Wed, 31 Dec 2014 00:00:00 +0000
+ -- fty-metric-compute Developers <opensource@eaton.com>  Wed, 31 Dec 2014 00:00:00 +0000
